--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-    <title>Document</title>
+    <title>Sample CV template</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="row">
+        <a href="index.html" class="col-md-4 logo"> </a>
+        <div class="col-md-8"></div>
+      </div>
+    </header>
     <section></section>
     <footer></footer>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
