--- a/index.html
+++ b/index.html
@@ -16,10 +16,40 @@
       <div class="row">
         <a href="index.html" class="col-md-4 logo"> </a>
         <div class="col-md-8">
-          <div class="row bg-color-name-title">
+          <div class="row g-0 bg-color-name-title">
             <div class="col heading">
               <h1 class="name">Rosie Odenkirk</h1>
               <h2 class="title">Full Stack Developer</h2>
+            </div>
+          </div>
+          <div class="row g-0">
+            <div class="col">
+              <ul id="nav" class="list-inline menucontainer">
+                <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+                  <a href="#">
+                    <span1>Home</span1>
+                  </a>
+                </li>
+                <li class="col-6 col-sm-3 ui-menu-color-cv list-inline-item">
+                  <a href="#">
+                    <span2>CV</span2>
+                  </a>
+                </li>
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item"
+                >
+                  <a href="#">
+                    <span3>Contact</span3>
+                  </a>
+                </li>
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item"
+                >
+                  <a href="#">
+                    <span4>Download</span4>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
