--- a/index.html
+++ b/index.html
@@ -25,28 +25,75 @@
           <div class="row g-0">
             <div class="col">
               <ul id="nav" class="list-inline menucontainer">
-                <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
+                >
                   <a href="#">
-                    <span1>Home</span1>
-                  </a>
-                </li>
-                <li class="col-6 col-sm-3 ui-menu-color-cv list-inline-item">
-                  <a href="#">
-                    <span2>CV</span2>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 24 24"
+                      width="24"
+                      height="24"
+                    >
+                      <path
+                        d="M12.97 2.59a1.5 1.5 0 0 0-1.94 0l-7.5 6.363A1.5 1.5 0 0 0 3 10.097V19.5A1.5 1.5 0 0 0 4.5 21h4.75a.75.75 0 0 0 .75-.75V14h4v6.25c0 .414.336.75.75.75h4.75a1.5 1.5 0 0 0 1.5-1.5v-9.403a1.5 1.5 0 0 0-.53-1.144l-7.5-6.363Z"
+                      ></path>
+                    </svg>
+                    <span>Home</span>
                   </a>
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item"
+                  class="col-6 col-sm-3 ui-menu-color-cv list-inline-item menuitem"
                 >
                   <a href="#">
-                    <span3>Contact</span3>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 24 24"
+                      width="24"
+                      height="24"
+                    >
+                      <path
+                        d="M3 3a2 2 0 0 1 2-2h9.982a2 2 0 0 1 1.414.586l4.018 4.018A2 2 0 0 1 21 7.018V21a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Zm2-.5a.5.5 0 0 0-.5.5v18a.5.5 0 0 0 .5.5h14a.5.5 0 0 0 .5-.5V8.5h-4a2 2 0 0 1-2-2v-4Zm10 0v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 0-.146-.336l-4.018-4.018A.5.5 0 0 0 15 2.5Z"
+                      ></path>
+                    </svg>
+                    <span>CV</span>
                   </a>
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item"
+                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
                   <a href="#">
-                    <span4>Download</span4>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 24 24"
+                      width="24"
+                      height="24"
+                    >
+                      <path
+                        d="M1.5 4.25c0-.966.784-1.75 1.75-1.75h17.5c.966 0 1.75.784 1.75 1.75v12.5a1.75 1.75 0 0 1-1.75 1.75h-9.69l-3.573 3.573A1.458 1.458 0 0 1 5 21.043V18.5H3.25a1.75 1.75 0 0 1-1.75-1.75ZM3.25 4a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h2.5a.75.75 0 0 1 .75.75v3.19l3.72-3.72a.749.749 0 0 1 .53-.22h10a.25.25 0 0 0 .25-.25V4.25a.25.25 0 0 0-.25-.25Z"
+                      ></path>
+                    </svg>
+                    <span>Contact</span>
+                  </a>
+                </li>
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
+                >
+                  <a href="#">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 24 24"
+                      width="24"
+                      height="24"
+                    >
+                      <path
+                        d="M11.25 9.331V.75a.75.75 0 0 1 1.5 0v8.58l1.949-2.11A.75.75 0 1 1 15.8 8.237l-3.25 3.52a.75.75 0 0 1-1.102 0l-3.25-3.52A.75.75 0 1 1 9.3 7.22l1.949 2.111Z"
+                      ></path>
+                      <path
+                        d="M2.5 3.75v11.5c0 .138.112.25.25.25h18.5a.25.25 0 0 0 .25-.25V3.75a.25.25 0 0 0-.25-.25h-5.5a.75.75 0 0 1 0-1.5h5.5c.966 0 1.75.784 1.75 1.75v11.5A1.75 1.75 0 0 1 21.25 17h-6.204c.171 1.375.805 2.652 1.769 3.757A.752.752 0 0 1 16.25 22h-8.5a.75.75 0 0 1-.566-1.243c.965-1.105 1.599-2.382 1.77-3.757H2.75A1.75 1.75 0 0 1 1 15.25V3.75C1 2.784 1.784 2 2.75 2h5.5a.75.75 0 0 1 0 1.5h-5.5a.25.25 0 0 0-.25.25ZM10.463 17c-.126 1.266-.564 2.445-1.223 3.5h5.52c-.66-1.055-1.098-2.234-1.223-3.5Z"
+                      ></path>
+                    </svg>
+                    <span>Download</span>
                   </a>
                 </li>
               </ul>
