--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Sample CV template</title>
@@ -28,7 +33,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
                 >
-                  <a href="#">
+                  <a href="#" class="hvr-sweep-to-bottom">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
@@ -45,7 +50,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-cv list-inline-item menuitem"
                 >
-                  <a href="#">
+                  <a href="#" class="hvr-sweep-to-bottom">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
@@ -62,7 +67,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#">
+                  <a href="#" class="hvr-sweep-to-bottom">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
@@ -79,7 +84,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#">
+                  <a href="#" class="hvr-sweep-to-bottom">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
