--- a/index.html
+++ b/index.html
@@ -108,7 +108,159 @@
       </div>
     </header>
     <section></section>
-    <footer></footer>
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4">
+          <h5 class="text-uppercase general-sub">About</h5>
+          <p class="d-inline">
+            Skilled Fullstack Developer with experience in HTML, CSS,
+            JavsScript, Python and Django.
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="text-uppercase general-sub">Download</h5>
+          <p class="d-inline">
+            Need a printable version of my CV? Download it here.
+            <a href="#" target="_blank" class="cv-pdf">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                width="24"
+                height="24"
+              >
+                <path
+                  d="M11.25 9.331V.75a.75.75 0 0 1 1.5 0v8.58l1.949-2.11A.75.75 0 1 1 15.8 8.237l-3.25 3.52a.75.75 0 0 1-1.102 0l-3.25-3.52A.75.75 0 1 1 9.3 7.22l1.949 2.111Z"
+                ></path>
+                <path
+                  d="M2.5 3.75v11.5c0 .138.112.25.25.25h18.5a.25.25 0 0 0 .25-.25V3.75a.25.25 0 0 0-.25-.25h-5.5a.75.75 0 0 1 0-1.5h5.5c.966 0 1.75.784 1.75 1.75v11.5A1.75 1.75 0 0 1 21.25 17h-6.204c.171 1.375.805 2.652 1.769 3.757A.752.752 0 0 1 16.25 22h-8.5a.75.75 0 0 1-.566-1.243c.965-1.105 1.599-2.382 1.77-3.757H2.75A1.75 1.75 0 0 1 1 15.25V3.75C1 2.784 1.784 2 2.75 2h5.5a.75.75 0 0 1 0 1.5h-5.5a.25.25 0 0 0-.25.25ZM10.463 17c-.126 1.266-.564 2.445-1.223 3.5h5.52c-.66-1.055-1.098-2.234-1.223-3.5Z"
+                ></path>
+              </svg>
+              <span class="visually-hidden-focusable">Download link</span></a
+            >
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="text-uppercase general-sub">Social</h5>
+          <ul class="list-inline social-links">
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <svg
+                  height="100%"
+                  style="
+                    fill-rule: evenodd;
+                    clip-rule: evenodd;
+                    stroke-linejoin: round;
+                    stroke-miterlimit: 2;
+                  "
+                  version="1.1"
+                  viewBox="0 0 512 512"
+                  width="100%"
+                  xml:space="preserve"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:serif="http://www.serif.com/"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                >
+                  <g>
+                    <path
+                      d="M512,256c0,-141.385 -114.615,-256 -256,-256c-141.385,0 -256,114.615 -256,256c0,127.777 93.616,233.685 216,252.89l0,-178.89l-65,0l0,-74l65,0l0,-56.4c0,-64.16 38.219,-99.6 96.695,-99.6c28.009,0 57.305,5 57.305,5l0,63l-32.281,0c-31.801,0 -41.719,19.733 -41.719,39.978l0,48.022l71,0l-11.35,74l-59.65,0l0,178.89c122.385,-19.205 216,-125.113 216,-252.89Z"
+                      style="fill: #1877f2; fill-rule: nonzero"
+                    />
+                    <path
+                      d="M355.65,330l11.35,-74l-71,0l0,-48.022c0,-20.245 9.917,-39.978 41.719,-39.978l32.281,0l0,-63c0,0 -29.297,-5 -57.305,-5c-58.476,0 -96.695,35.44 -96.695,99.6l0,56.4l-65,0l0,74l65,0l0,178.89c13.033,2.045 26.392,3.11 40,3.11c13.608,0 26.966,-1.065 40,-3.11l0,-178.89l59.65,0Z"
+                      style="fill: #fff; fill-rule: nonzero"
+                    />
+                  </g>
+                </svg>
+                <span class="visually-hidden-focusable">Facebook</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:serif="http://www.serif.com/"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  height="100%"
+                  style="
+                    fill-rule: evenodd;
+                    clip-rule: evenodd;
+                    stroke-linejoin: round;
+                    stroke-miterlimit: 2;
+                  "
+                  version="1.1"
+                  viewBox="0 0 512 512"
+                  width="100%"
+                  xml:space="preserve"
+                >
+                  <g id="g5891">
+                    <path
+                      d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z"
+                      id="background"
+                      style="fill: #2867b2"
+                    />
+                    <g id="shapes">
+                      <rect
+                        height="257.962"
+                        id="rect11"
+                        style="fill: #fff"
+                        width="85.76"
+                        x="61.053"
+                        y="178.667"
+                      />
+                      <path
+                        d="M104.512,54.28c-29.341,0 -48.512,19.29 -48.512,44.573c0,24.752 18.588,44.574 47.377,44.574l0.554,0c29.903,0 48.516,-19.822 48.516,-44.574c-0.555,-25.283 -18.611,-44.573 -47.935,-44.573Z"
+                        id="path13-0"
+                        style="fill: #fff; fill-rule: nonzero"
+                      />
+                      <path
+                        d="M357.278,172.601c-45.49,0 -65.866,25.017 -77.276,42.589l0,-36.523l-85.738,0c1.137,24.197 0,257.961 0,257.961l85.737,0l0,-144.064c0,-7.711 0.554,-15.42 2.827,-20.931c6.188,-15.4 20.305,-31.352 43.993,-31.352c31.012,0 43.436,23.664 43.436,58.327l0,138.02l85.741,0l0,-147.93c0,-79.237 -42.305,-116.097 -98.72,-116.097Z"
+                        id="path15"
+                        style="fill: #fff; fill-rule: nonzero"
+                      />
+                    </g>
+                  </g>
+                </svg>
+                <span class="visually-hidden-focusable">Linkedin</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:serif="http://www.serif.com/"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  height="100%"
+                  style="
+                    fill-rule: evenodd;
+                    clip-rule: evenodd;
+                    stroke-linejoin: round;
+                    stroke-miterlimit: 2;
+                  "
+                  version="1.1"
+                  viewBox="0 0 512 512"
+                  width="100%"
+                  xml:space="preserve"
+                >
+                  <g>
+                    <path
+                      d="M448,512l-384,0c-35.328,0 -64,-28.672 -64,-64l0,-384c0,-35.328 28.672,-64 64,-64l384,0c35.328,0 64,28.672 64,64l0,384c0,35.328 -28.672,64 -64,64Z"
+                      id="Dark_Blue"
+                      style="fill: #1da1f2; fill-rule: nonzero"
+                    />
+                    <path
+                      d="M196.608,386.048c120.704,0 186.752,-100.096 186.752,-186.752c0,-2.816 0,-5.632 -0.128,-8.448c12.8,-9.216 23.936,-20.864 32.768,-34.048c-11.776,5.248 -24.448,8.704 -37.76,10.368c13.568,-8.064 23.936,-20.992 28.928,-36.352c-12.672,7.552 -26.752,12.928 -41.728,15.872c-12.032,-12.8 -29.056,-20.736 -47.872,-20.736c-36.224,0 -65.664,29.44 -65.664,65.664c0,5.12 0.64,10.112 1.664,14.976c-54.528,-2.688 -102.912,-28.928 -135.296,-68.608c-5.632,9.728 -8.832,20.992 -8.832,33.024c0,22.784 11.648,42.88 29.184,54.656c-10.752,-0.384 -20.864,-3.328 -29.696,-8.192l0,0.896c0,31.744 22.656,58.368 52.608,64.384c-5.504,1.536 -11.264,2.304 -17.28,2.304c-4.224,0 -8.32,-0.384 -12.288,-1.152c8.32,26.112 32.64,45.056 61.312,45.568c-22.528,17.664 -50.816,28.16 -81.536,28.16c-5.248,0 -10.496,-0.256 -15.616,-0.896c28.928,18.432 63.488,29.312 100.48,29.312"
+                      id="Logo__x2014__FIXED"
+                      style="fill: #fff; fill-rule: nonzero"
+                    />
+                  </g>
+                </svg>
+                <span class="visually-hidden-focusable">Twitter</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
