--- a/cv.html
+++ b/cv.html
@@ -107,17 +107,7 @@
         </div>
       </div>
     </header>
-    <section class="container-fluid">
-      <div class="row d-table">
-        <div class="col-md-8 bg-color-three-reason d-table-cell px-3 py-0">
-          <div class="row">
-            <div class="col">
-              <h3 class="section-heading text-uppercase">About me</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <section></section>
     <footer class="container-fluid">
       <div class="row">
         <div class="col-sm-4">
