add personal info section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="row">
-        <a href="index.html" class="col-md-4 logo"> </a>
-        <div class="col-md-8">
+        <a href="index.html" class="col-md-4 logo g-0"> </a>
+        <div class="col-md-8 g-1">
           <div class="row g-0 bg-color-name-title">
             <div class="col heading">
               <h1 class="name">Rosie Odenkirk</h1>
@@ -108,8 +108,39 @@
       </div>
     </header>
     <section class="container-fluid">
-      <div class="row d-table">
-        <div class="col-md-8 bg-color-three-reason d-table-cell px-3 py-0">
+      <div class="row">
+        <div class="col-md-4 bg-color-personal-info d-table-cell p-4 px-3 g-0">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="section-heading text-uppercase">Personal Info</h3>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <key>
+              <p class="text-uppercase">Name:</p>
+            </key>
+            <div class="value">
+              <p class="mb-0">Rosie Odenkirk</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <key>
+              <p class="text-uppercase">Phone:</p>
+            </key>
+            <div class="value">
+              <p class="mb-0">+353 83 859 9462</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <key>
+              <p class="text-uppercase">Email:</p>
+            </key>
+            <div class="value">
+              <p class="mb-0">rosie.ok@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8 bg-color-three-reason d-table-cell px-3 py-0 g-0">
           <div class="row">
             <div class="col">
               <h3 class="section-heading text-uppercase">About me</h3>
@@ -118,7 +149,7 @@
           <div class="row">
             <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
               <div class="row">
-                <div class="col-2">
+                <div class="col-12 col-md-2 mb-3 mb-md-0">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -148,7 +179,7 @@
             </div>
             <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
               <div class="row">
-                <div class="col-2">
+                <div class="col-12 col-md-2 mb-3 mb-md-0">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -174,7 +205,7 @@
             </div>
             <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
               <div class="row">
-                <div class="col-2">
+                <div class="col-12 col-md-2 mb-3 mb-md-0">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
