--- a/index.html
+++ b/index.html
@@ -116,25 +116,25 @@
             </div>
           </div>
           <div class="personal-info-item">
-            <key>
+            <div class="key">
               <p class="text-uppercase">Name:</p>
-            </key>
+            </div>
             <div class="value">
               <p class="mb-0">Rosie Odenkirk</p>
             </div>
           </div>
           <div class="personal-info-item">
-            <key>
+            <div class="key">
               <p class="text-uppercase">Phone:</p>
-            </key>
+            </div>
             <div class="value">
               <p class="mb-0">+353 83 859 9462</p>
             </div>
           </div>
           <div class="personal-info-item">
-            <key>
+            <div class="key">
               <p class="text-uppercase">Email:</p>
-            </key>
+            </div>
             <div class="value">
               <p class="mb-0">rosie.ok@gmail.com</p>
             </div>
