--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-8 bg-color-three-reason d-table-cell px-3 py-0 g-0">
+        <div class="col-md-8 bg-color-three-reasons d-table-cell px-3 py-0 g-0">
           <div class="row">
             <div class="col">
               <h3 class="section-heading text-uppercase">About me</h3>
