--- a/cv.html
+++ b/cv.html
@@ -109,14 +109,32 @@
     </header>
     <section class="container-fluid">
       <div class="row">
-        <div class="col-md-4 bg-color-personal-info d-table-cell p-4 px-3 g-0">
+        <div class="col-md-4 bg-color-work-history d-table-cell p-4 g-0">
           <div class="row">
             <div class="col-12">
-              <h3 class="section-heading text-uppercase">Work History</h3>
+              <h3 class="history-heading text-uppercase">Work History</h3>
+            </div>
+            <div class="history-items">
+              <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                <h4>National College of Art and Design (NCAD)</h4>
+                <p>Sculptor in residence</p>
+              </div>
+              <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                <h4>Fisher and Diaz Funeral Directors</h4>
+                <p>Junior Embalmer</p>
+              </div>
+              <div class="timeline-item" data-dates="06/2008 - 06/2011">
+                <h4>Phantom Design Inc. Dublin</h4>
+                <p>Junior Front End Developer</p>
+              </div>
+              <div class="timeline-item" data-dates="06/2011 - Present">
+                <h4>Hooli Inc. Silicon Valley</h4>
+                <p>Full Stack Web Developer</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-8 bg-color-three-reasons d-table-cell px-3 py-0 g-0">
+        <div class="col-md-8 bg-color-three-reasons d-table-cell p-4 g-0">
           <div class="row">
             <div class="col">
               <h3 class="section-heading text-uppercase">My Skills</h3>
