--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,41 @@
         </div>
       </div>
     </header>
-    <section></section>
+    <section class="container-fluid">
+      <div class="row bg-color-contact my-4">
+        <div class="col">
+          <h3 class="text-uppercase text-center contact-heading">Got a project in mind?</h3>
+          <h5 class="text-uppercase text-center">Let's work together!</h5>
+          <div class="center-form py-5">
+            <div class="col">
+              <form class="center-form">
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="Your name"
+                  class="form-control"
+                />
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="Your email"
+                  class="form-control"
+                />
+                <textarea
+                  name="message"
+                  placeholder="Your message"
+                  class="form-control"
+                ></textarea>
+                <button
+                  type="submit"
+                  class="btn btn-block"
+                >Send</button>
+              </form>
+          </div>
+        </div>
+
+      </div>
+    </section>
     <footer class="container-fluid">
       <div class="row">
         <div class="col-sm-4">
