--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom">
+                  <a href="index.html" class="hvr-sweep-to-bottom">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
@@ -50,7 +50,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-cv list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom">
+                  <a href="cv.html" class="hvr-sweep-to-bottom">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
@@ -67,7 +67,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom">
+                  <a href="contact.html" class="hvr-sweep-to-bottom">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
@@ -84,7 +84,11 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom">
+                  <a
+                    href="assets/cv/sample-cv.pdf"
+                    target="_blank"
+                    class="hvr-sweep-to-bottom"
+                  >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
