add download cv link to footer

--- a/cv.html
+++ b/cv.html
@@ -285,7 +285,7 @@
           <h5 class="text-uppercase general-sub">Download</h5>
           <p class="d-inline">
             Need a printable version of my CV? Download it here.
-            <a href="#" target="_blank" class="cv-pdf">
+            <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
